--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <body>
         <h1>AristoFlat</h1>
         <h2>A New Cappuccino Theme</h2>
+        <a href="tables.html">Tables</a>
+        <a href="windows.html">Windows</a>
         <section>
             <h3>Menubar</h3>
             <div class="spacer">
@@ -113,7 +115,7 @@
         <section>
             <h3>Input Fields</h3>
             <div class="spacer">
-                <input type="text" class="input" placeholder="Placeholder Text">
+                <input type="text" class="input input-focus-ring" placeholder="Placeholder Text">
             </div>
             <div class="spacer">
                 <input type="password" class="input input-password" placeholder="Password Text">
