Modification with scss and sass...noob powa

--- a/index.html
+++ b/index.html
@@ -102,6 +102,13 @@
             </div>
         </section>
         <section>
+            <h3>Radio and Checkbox buttons</h3>
+            <input type="radio" name="country" value="Canada" class="radio radio-unchecked"> Canada<br>
+            <input type="radio" name="country" value="France" checked class="radio radio-checked"> France<br>
+            <input type="checkbox" name="alcohol" value="Beer" class="checkbox checkbox-unchecked"> Beer<br>
+            <input type="checkbox" name="alcohol" value="Wine" checked class="checkbox checkbox-checked"> Wine<br>
+        </section>
+        <section>
             <h3>Sliders</h3>
             <h4>Linear</h4>
             <div id="slider" class="slider-track">
@@ -123,15 +130,17 @@
             <div class="spacer">
                 <input type="text" class="input input-rounded" placeholder="Rounded">
             </div>
-            <div class="spacer">
-                <input type="text" class="input input-stepper" placeholder="Stepper">
-                <div class="stepper-up">&#9650;</div>
-                <div class="stepper-down">&#9660;</div>
-            </div>
-            <div class="spacer">
-                <input type="text" class="input input-dropdown" placeholder="Dropdown">
-                <div class="dropdown-down">&#9660;</div>
-            </div>
+                 <input type="text" class="input input-stepper" placeholder="Stepper">
+                 <div class="stepper-up"></div>
+                 <div class="stepper-down"></div>
+                 <div class="stepper-up-value">&#9650;</div>
+                 <div class="stepper-down-value">&#9660;</div>
+             </div>
+             <div class="spacer">
+                 <input type="text" class="input input-dropdown" placeholder="Dropdown">
+                 <div class="dropdown-down"></div>
+                 <div class="dropdown-down-value">&#9660;</div>
+             </div>
         </section>
         <section>
             <h3>Toolbar</h3>
